# Iron-Template

./: Cargo.toml  README.md
resources/files/css/: about.css  nav_bar.css  practice_sheet_form.css  style.css
src/: macros.rs  main.rs  routes.rs
src/handlers/: basic_template.rs  mod.rs  settings_page.rs
src/handlers/endpoints/: edit_settings_endpoint.rs  log_out_endpoint.rs  logout.rs  mod.rs  save_store.rs  save_store_endpoint.rs  session.rs
src/handlers/pages/: about_page.rs  contact_page.rs  home_page.rs  log_in_page.rs  mod.rs  register_page.rs  settings_page.rs
src/store/: mod.rs  preferences.rs  session.rs  user.rs
src/templates/components/: header_component.rs  mod.rs  top_nav.rs
src/templates/pages/: mod.rs  settings_page.rs  welcome_page.rs
src/templates/pages/generic/: iterator.rs  mod.rs
src/templates/pages/generic/form/: form_field.rs  mod.rs  templates.rs
src/utils/: mod.rs  security.rs
