[package]
name = "iron-template"
version = "0.1.0"
authors = ["Alex <alex@alex-hansen.com>"]

[dependencies]
iron = "0.6.1"
router = "0.6.0"
urlencoded = "0.6.0"
handlebars-iron = "0.28.0"
horrorshow = "0.7.0"
staticfile = "0.5.0"
mount = "0.4.0"
serde_json = "1.0.40"
persistent = "0.4.0"
chrono = "0.4"
secure-session = "0.3.1"
serde_derive = "1.0.100"
serde = "1.0.100"
snowflake = { version = "1.2", features = ["serde_support"]}
bincode = "1.1.4"
url = "2.1.0"
ring = "0.17.13"